; ModuleID = '/home/carl/AnghaBench/linux/drivers/char/ipmi/extr_ipmi_ssif.c_get_smi_info.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/char/ipmi/extr_ipmi_ssif.c_get_smi_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ipmi_smi_info = type { i32*, i32, i32 }
%struct.ssif_info = type { i32, %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, %struct.ipmi_smi_info*)* @get_smi_info to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_smi_info(i8* %0, %struct.ipmi_smi_info* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.ipmi_smi_info*, align 8
  %5 = alloca %struct.ssif_info*, align 8
  store i8* %0, i8** %3, align 8
  store %struct.ipmi_smi_info* %1, %struct.ipmi_smi_info** %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.ssif_info*
  store %struct.ssif_info* %7, %struct.ssif_info** %5, align 8
  %8 = load %struct.ssif_info*, %struct.ssif_info** %5, align 8
  %9 = getelementptr inbounds %struct.ssif_info, %struct.ssif_info* %8, i32 0, i32 2
  %10 = load i32, i32* %9, align 8
  %11 = load %struct.ipmi_smi_info*, %struct.ipmi_smi_info** %4, align 8
  %12 = getelementptr inbounds %struct.ipmi_smi_info, %struct.ipmi_smi_info* %11, i32 0, i32 2
  store i32 %10, i32* %12, align 4
  %13 = load %struct.ssif_info*, %struct.ssif_info** %5, align 8
  %14 = getelementptr inbounds %struct.ssif_info, %struct.ssif_info* %13, i32 0, i32 1
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load %struct.ipmi_smi_info*, %struct.ipmi_smi_info** %4, align 8
  %18 = getelementptr inbounds %struct.ipmi_smi_info, %struct.ipmi_smi_info* %17, i32 0, i32 0
  store i32* %16, i32** %18, align 8
  %19 = load %struct.ssif_info*, %struct.ssif_info** %5, align 8
  %20 = getelementptr inbounds %struct.ssif_info, %struct.ssif_info* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 8
  %22 = load %struct.ipmi_smi_info*, %struct.ipmi_smi_info** %4, align 8
  %23 = getelementptr inbounds %struct.ipmi_smi_info, %struct.ipmi_smi_info* %22, i32 0, i32 1
  store i32 %21, i32* %23, align 8
  %24 = load %struct.ipmi_smi_info*, %struct.ipmi_smi_info** %4, align 8
  %25 = getelementptr inbounds %struct.ipmi_smi_info, %struct.ipmi_smi_info* %24, i32 0, i32 0
  %26 = load i32*, i32** %25, align 8
  %27 = call i32 @get_device(i32* %26)
  ret i32 0
}

declare dso_local i32 @get_device(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
